Update august 15th

--- a/noumena/2023/august/15/index.org
+++ b/noumena/2023/august/15/index.org
@@ -5,7 +5,7 @@
 
 * Morning
 
-I really appreciate Noumena letting me sleep. I slept all the way until 7:55am, hit the snooze twice and got out of bed at 8:05am. I bought soymilk, so we're back on our regular porridge. This time, however, a tartness not usually present emerged as honeycrisp apples were not used to make it, instead it was prepared with granny smith golden delicious apples. Noumena, sitting on my lap, insists on allowing her to use the spoon from time to time rather than Daddy feeding her.
+I really appreciate Noumena letting me sleep. I slept all the way until 7:55am, hit the snooze twice and got out of bed at 8:05am. I bought soymilk, so we're back on our regular porridge. This time, however, a tartness not usually present emerged as honeycrisp apples were not used to make it, but instead prepared with granny smith and golden delicious apples. Noumena, sitting on my lap, insists on allowing her to use the spoon from time to time rather than Daddy feeding her.
 
 By the time we're finished it's almost time to go. I have to use the restroom, so I set Noumena down. As she's distracted, I make my way to the restroom. Once again, she follows me in and I have to resort to throwing a bottle in order to get her to leave me in peace. We leave shortly thereafter.
 
