--- a/noumena/2023/august/index.org
+++ b/noumena/2023/august/index.org
@@ -20,5 +20,5 @@
   <a href="./05">5</a>   <a href="./06">6</a>   <a href="./07">7</a>   <a href="./08">8</a>   <a href="./09">9</a>   <a href="./10">10</a>   <a href="./11">11</a>
   <a href="./12">12</a>   <a href="./13">13</a>   <a href="./14">14</a>   <a href="./15">15</a>   <a href="./16">16</a>   <a href="./17">17</a>   <a href="./18">18</a>
   <a href="./19">19</a>   <a href="./20">20</a>   <a href="./21">21</a>   <a href="./22">22</a>   <a href="./23">23</a>   <a href="./24">24</a>   <a href="./25">25</a>
-  <a>26</a>   <a>27</a>   <a>28</a>   <a>29</a>   <a>30</a>   <a>31</a> </div>
+  <a href="./26">26</a>   <a>27</a>   <a>28</a>   <a>29</a>   <a>30</a>   <a>31</a> </div>
   #+end_export
