--- a/noumena/2023/index.org
+++ b/noumena/2023/index.org
@@ -127,8 +127,8 @@
 <div class="calendar">
   <a href="/noumena/2023/october/01">1</a>   <a href="/noumena/2023/october/02/">2</a>   <a href="/noumena/2023/october/03/">3</a>   <a>4</a>   <a href="/noumena/2023/october/05/">5</a>   <a>6</a>
   <a href="/noumena/2023/october/07/">7</a>   <a>8</a>   <a>9</a>   <a href="/noumena/2023/october/10/">10</a>   <a href="/noumena/2023/october/11/">11</a>   <a href="/noumena/2023/october/12/">12</a>   <a href="/noumena/2023/october/13/">13</a>
-  <a href="/noumena/2023/october/14/">14</a>   <a href="/noumena/2023/october/15/">15</a>   <a href="/noumena/2023/october/16/">16</a>   <a href="/noumena/2023/october/17/">17</a>   <a href="/noumena/2023/october/18/">18</a>   <a>19</a>   <a>20</a>
-  <a>21</a>   <a>22</a>   <a>23</a>   <a>24</a>   <a>25</a>   <a>26</a>   <a>27</a>
-  <a>28</a>   <a>29</a>   <a>30</a>   <a>31</a>
+  <a href="/noumena/2023/october/14/">14</a>   <a href="/noumena/2023/october/15/">15</a>   <a href="/noumena/2023/october/16/">16</a>   <a href="/noumena/2023/october/17/">17</a>   <a href="/noumena/2023/october/18/">18</a>   <a href="/noumena/2023/october/19/">19</a>   <a href="/noumena/2023/october/20/">20</a>
+  <a href="/noumena/2023/october/21/">21</a>   <a href="/noumena/2023/october/22/">22</a>   <a href="/noumena/2023/october/23/">23</a>   <a href="/noumena/2023/october/24/">24</a>   <a href="/noumena/2023/october/25/">25</a>   <a href="/noumena/2023/october/26/">26</a>   <a href="/noumena/2023/october/27/">27</a>
+  <a href="/noumena/2023/october/28/">28</a>   <a href="/noumena/2023/october/29/">29</a>   <a href="/noumena/2023/october/30/">30</a>   <a>31</a>
 </div>
 #+end_export
