--- a/noumena/2023/october/index.org
+++ b/noumena/2023/october/index.org
@@ -18,6 +18,6 @@
   <a href="/noumena/2023/october/07/">7</a>   <a>8</a>   <a>9</a>   <a href="/noumena/2023/october/10/">10</a>   <a href="/noumena/2023/october/11/">11</a>   <a href="/noumena/2023/october/12/">12</a>   <a href="/noumena/2023/october/13/">13</a>
   <a href="/noumena/2023/october/14/">14</a>   <a href="/noumena/2023/october/15/">15</a>   <a href="/noumena/2023/october/16/">16</a>   <a href="/noumena/2023/october/17/">17</a>   <a href="/noumena/2023/october/18/">18</a>   <a href="/noumena/2023/october/19/">19</a>   <a href="/noumena/2023/october/20/">20</a>
   <a href="/noumena/2023/october/21/">21</a>   <a href="/noumena/2023/october/22/">22</a>   <a href="/noumena/2023/october/23/">23</a>   <a href="/noumena/2023/october/24/">24</a>   <a href="/noumena/2023/october/25/">25</a>   <a href="/noumena/2023/october/26/">26</a>   <a href="/noumena/2023/october/27/">27</a>
-  <a href="/noumena/2023/october/28/">28</a>   <a href="/noumena/2023/october/29/">29</a>   <a href="/noumena/2023/october/30/">30</a>   <a>31</a>
+  <a href="/noumena/2023/october/28/">28</a>   <a href="/noumena/2023/october/29/">29</a>   <a href="/noumena/2023/october/30/">30</a>   <a href="/noumena/2023/october/31/">31</a>
 </div>
 #+end_export
