Adding last 3 days

--- a/noumena/2023/august/01/index.org
+++ b/noumena/2023/august/01/index.org
@@ -16,7 +16,10 @@ I had already let Kisa outside, but not Chalmers, so with Noumena in hand, I ope
 
 [[file:touching-chalmers.jpg]]
 
-* Pediatrician
+* 15 Month Pediatrician Appointment
+:PROPERTIES:
+:CUSTOM_ID: 15-mo-pediatrician-appointment
+:END:
 
 Yesterday, I scheduled a pediatrician appointment for 1pm today so I leave home about 12:30pm to pick Noumena up from daycare and take her to her 15 month regular visit. I don't know how, but it somehow slipped my mind that she was supposed to see the doctor at 15 months. I thought her next appointment wasn't until 18 months. The reason I thought I should go in is because she's at 15 months, so all my googling about tantrums recently was about that age, and I kept reading about their traditional 15 month appointments. I'm tempted to use the adage about black clouds and silver linings, but I don't actually view the tantrums as black clouds. I appreciate this stage of development and am very patient about it. In any case, I'm grateful for them in an unsuspecting way because those tantrums made sure I got her to her 15 month appointment.
 
