--- a/noumena/2023/november/index.org
+++ b/noumena/2023/november/index.org
@@ -19,7 +19,7 @@
   <span></span>
   <span></span>
   <a href="/noumena/2023/november/01">1</a>   <a href="/noumena/2023/november/02">2</a>   <a href="/noumena/2023/november/03">3</a>
-  <a href="/noumena/2023/november/04">4</a>   <a href="/noumena/2023/november/05">5</a>   <a>6</a>   <a>7</a>   <a>8</a>   <a>9</a>   <a>10</a>
+  <a href="/noumena/2023/november/04">4</a>   <a href="/noumena/2023/november/05">5</a>   <a href="/noumena/2023/november/06">6</a>   <a href="/noumena/2023/november/07">7</a>   <a>8</a>   <a>9</a>   <a>10</a>
   <a>11</a>   <a>12</a>   <a>13</a>   <a>14</a>   <a>15</a>   <a>16</a>   <a>17</a>
   <a>18</a>   <a>19</a>   <a>20</a>   <a>21</a>   <a>22</a>   <a>23</a>   <a>24</a>
   <a>25</a>   <a>26</a>   <a>27</a>   <a>28</a>   <a>29</a>   <a>30</a> </div>
