Adding end of November and Beginning December.

--- a/movie-list/index.org
+++ b/movie-list/index.org
@@ -1,3 +1,11 @@
 * FernGully
 ** Reasons
  * Environmentalist cartoon I watched when I was a kid and liked
+
+* Forgetting Sarah Marshall
+
+* Blue Valentine
+
+* Bruce Almighty
+
+* Captain Fantastic
